[tool.poetry]
name = "qa-guru-14-hm16"
version = "0.1.0"
description = ""
authors = ["Petr Andreev <drakula2805@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc9"
pytest = "8.3.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
